Started work on building multiplier

--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homer's Awesome Donut Factory!</title>
+    <title>mmmm donuts</title>
 </head>
 <body>
     <div>
-        <h1>Homer's Awesome Donut Factory!</h1>
+        <h1>Homer's Awesome Lard Lad Donut Factory!</h1>
+        <h2>mmmm donuts</h2>
         <section class="dashboard">
             <div class="donut_counter">Initial Donut Count</div>
             <section class="donut_dashboard">
-                <button class="donut_add">Add a Donut</button>
-                <button class="donut_remove">Remove a Donut</button>
-                <button class="donut_autoclicker_add">Add Autoclicker</button>
+                <button class="donut_add">Add a Donut (woohoo!)</button>
+                <button class="donut_remove">Remove a Donut (doh!)</button>
+                <button class="donut_autoclicker_add">Add AutoClicker (EXCELLENT)</button>
+                <button class="donut_multiplier_add">Add Multipler (Nice)</button>
             </section>
         </div>
         <script src="./src/js/Donut.js"></script>
