Added nav bar, count HTML

--- a/index.html
+++ b/index.html
@@ -7,19 +7,28 @@
     <title>mmmm donuts</title>
 </head>
 <body>
+    <nav>
+        <a href="#top">Home</a>
+        <a href="">Inspiration</a>
+        <a href="">About The Company</a>
+        <a href="">About The Developer</a>
+    </nav>
     <div>
+        <br>
         <h1>Homer's Awesome Lard Lad Donut Factory!</h1>
-        <h2>mmmm donuts</h2>
+        <h1><i><marquee behavior="alternate" scrollamount="12">mmmm donuts</marquee></i></h1>
         <section class="dashboard">
             <div class="donut_counter">Initial Donut Count</div>
             <section class="donut_dashboard">
-                <button class="donut_add">Add a Donut (woohoo!)</button>
-                <button class="donut_remove">Remove a Donut (doh!)</button>
-                <button class="donut_autoclicker_add">Add AutoClicker (EXCELLENT)</button>
-                <button class="donut_multiplier_add">Add Multipler (Nice)</button>
+                <button class="donut_add">Get Donuts (woohoo!)</button><br><br>
+                <button class="donut_remove">Eat a Donut (doh!)</button><br><br>
+                <button class="donut_autoclicker_add">Add AutoClicker (EXCELLENT)</button><br><br>
+                <button class="donut_multiplier_add">Add Multiplier (Santa's Little Helper)</button><br><br>
+                <div class="donut_multiplier_counter">Multiplier Count:</div>
+                <div class="donut_autoclicker_counter">Autoclicker Count:</div>
             </section>
         </div>
         <script src="./src/js/Donut.js"></script>
         <script src="./src/js/app.js"></script>
-    </body>
-    </html>
+</body>
+</html>
