Added the nav links

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
     <nav>
-        <a href="#top">Home</a>
-        <a href="">Inspiration</a>
-        <a href="">About The Company</a>
-        <a href="">About The Developer</a>
+        <a href="https://orteil.dashnet.org/cookieclicker/" target="_blank">Inspiration</a>
+        <a href="https://wecancodeit.org/" target="_blank">About The Company</a>
+        <a href="https://droman21.github.io/" target="_blank">About The Developer</a>
     </nav>
     <div>
         <br>
