In progress reset button

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <button class="donut_remove">Eat a Donut (doh!)</button><br><br>
                 <button class="donut_autoclicker_add">Add AutoClicker (EXCELLENT)</button><br><br>
                 <button class="donut_multiplier_add">Add Multiplier (Santa's Little Helper)</button><br><br>
+                <button class="reset">Reset The Factory</button>
                 <div class="donut_multiplier_counter">Multiplier Count:</div>
                 <div class="donut_autoclicker_counter">Autoclicker Count:</div>
             </section>
