Reset button takes count back to zero

--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 <body>
     <nav>
         <a href="https://orteil.dashnet.org/cookieclicker/" target="_blank">Inspiration</a>
-        <a href="https://wecancodeit.org/" target="_blank">About The Company</a>
-        <a href="https://droman21.github.io/" target="_blank">About The Developer</a>
+        <a href="https://wecancodeit.org/" target="_blank">About the Company</a>
+        <a href="https://droman21.github.io/" target="_blank">About the Developer</a>
     </nav>
     <div>
         <br>
         <h1>Homer's Awesome Lard Lad Donut Factory!</h1>
         <h1><i><marquee behavior="alternate" scrollamount="12">mmmm donuts</marquee></i></h1>
         <section class="dashboard">
-            <div class="donut_counter">Initial Donut Count</div>
+            <div class="donut_counter"<span id="Value">0</div></span>
             <section class="donut_dashboard">
                 <button class="donut_add">Get Donuts (woohoo!)</button><br><br>
                 <button class="donut_remove">Eat a Donut (doh!)</button><br><br>
                 <button class="donut_autoclicker_add">Add AutoClicker (EXCELLENT)</button><br><br>
                 <button class="donut_multiplier_add">Add Multiplier (Santa's Little Helper)</button><br><br>
-                <button class="reset">Reset The Factory</button>
+                <button id="reset">Reset the Factory</button>
                 <div class="donut_multiplier_counter">Multiplier Count:</div>
                 <div class="donut_autoclicker_counter">Autoclicker Count:</div>
             </section>
