Added cost display to autoclicker and multiplier buttons

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <section class="donut_dashboard">
                 <button class="donut_add">Get Donuts (woohoo!)</button><br><br>
                 <button class="donut_remove">Eat a Donut (doh!)</button><br><br>
-                <button class="donut_autoclicker_add">Add AutoClicker (EXCELLENT)</button><br><br>
-                <button class="donut_multiplier_add">Add Multiplier (Santa's Little Helper)</button><br><br>
+                <button class="donut_autoclicker_add">Add AutoClicker (Cost: 50 Donuts)</button><br><br>
+                <button class="donut_multiplier_add">Add Multiplier (Cost: 10 Donuts)</button><br><br>
                 <button id="reset">Reset the Factory</button>
                 <div class="donut_multiplier_counter">Multiplier Count:</div>
                 <div class="donut_autoclicker_counter">Autoclicker Count:</div>
