Autoclicker and multipler cost now update per purchase and dispaly in browser

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
             <section class="donut_dashboard">
                 <button class="donut_add">Get Donuts (woohoo!)</button><br><br>
                 <button class="donut_remove">Eat a Donut (doh!)</button><br><br>
-                <button class="donut_autoclicker_add">Add AutoClicker (Cost: 50 Donuts)</button><br><br>
-                <button class="donut_multiplier_add">Add Multiplier (Cost: 10 Donuts)</button><br><br>
-                <button id="reset">Reset the Factory</button>
+                <button class="donut_autoclicker_add">Add AutoClicker</button><br><br>
+                <button class="donut_multiplier_add">Add Multiplier</button><br><br>
+                <button id="reset">Reset the Factory</button><br><br>
+                <div class="donut_autoclicker_cost">AutoClicker Cost:</div>
                 <div class="donut_autoclicker_counter">Autoclicker Count:</div>
+                <div class="donut_multiplier_cost">Multiplier Cost:</div>
                 <div class="donut_multiplier_counter">Multiplier Count:</div>
             </section>
         </div>
