--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button class="donut_remove">Eat a Donut (doh!)</button><br><br>
                 <button class="donut_autoclicker_add">Add AutoClicker</button><br><br>
                 <button class="donut_multiplier_add">Add Multiplier</button><br><br>
-                <button id="reset">Reset the Factory</button><br><br>
+                <form><input id = "reset" type="button" onClick="history.go(0)" VALUE="Reset the Factory"></form><br><br>
                 <div class="donut_autoclicker_cost">AutoClicker Cost:</div>
                 <div class="donut_autoclicker_counter">Autoclicker Count:</div>
                 <div class="donut_multiplier_cost">Multiplier Cost:</div>
