Updated display message

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Homer's Awesome Lard Lad Donut Factory!</h1>
         <h1><i><marquee behavior="alternate" scrollamount="12">mmmm donuts</marquee></i></h1>
         <section class="dashboard">
-            <div class="donut_counter"<span id="Value">0</div></span>
+            <div class="donut_counter"<span id="Value">Donuts: 0</div></span>
             <section class="donut_dashboard">
                 <button class="donut_add">Get Donuts (woohoo!)</button><br><br>
                 <button class="donut_remove">Eat a Donut (doh!)</button><br><br>
