More updates to display

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button class="donut_multiplier_add">Add Multiplier</button><br><br>
                 <form><input id = "reset" type="button" onClick="history.go(0)" VALUE="Reset the Factory"></form><br><br>
                 <div class="donut_autoclicker_cost">AutoClicker Cost:</div>
-                <div class="donut_autoclicker_counter">Autoclicker Count:</div>
+                <div class="donut_autoclicker_counter">AutoClicker Count:</div>
                 <div class="donut_multiplier_cost">Multiplier Cost:</div>
                 <div class="donut_multiplier_counter">Multiplier Count:</div>
             </section>
